--- a/public/css/style.css
+++ b/public/css/style.css
@@ -107,16 +107,17 @@ ul.posts {
 #preview {
   width: 100px;
   position: absolute;
-  top: -60px;
-  left: 17px; }
+  top: -55px;
+  left: 15px; }
 
 .actions {
   position: absolute;
   right: 10px;
   top: 10px; }
 
-input.file {
-  margin-top: 30px; }
+input[type="file"].inline-file {
+  margin-top: 30px;
+  margin-bottom: 0; }
 
 ul.centerize {
   margin: 0 auto !important;
